# saturnacademy

./: .env  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
.github/workflows/: build-desktop.yml
.lovable/: pair-lab-audit.md  plan.md
copier-desktop/: INSTALLATION.md  README.md  RELEASE.md  index.html  package.json  vite.config.ts
copier-desktop/src/: App.tsx  index.css  types.ts
copier-desktop/src-tauri/: Cargo.toml  tauri.conf.json
copier-desktop/src-tauri/resources/: TradeCopierMaster.mq5  TradeCopierReceiver.mq5
copier-desktop/src-tauri/src/: logging.rs  main.rs
copier-desktop/src-tauri/src/copier/: commands.rs  config_generator.rs  event_processor.rs  execution_queue.rs  file_watcher.rs  idempotency.rs  lot_calculator.rs  mod.rs  position_sync.rs  reconciliation.rs  safety.rs  symbol_catalog.rs  trade_executor.rs
copier-desktop/src-tauri/src/mt5/: bridge.rs  discovery.rs  mod.rs
copier-desktop/src-tauri/src/sync/: commands.rs  config.rs  executions.rs  mod.rs  state.rs
mql5/: README.md  TradeCopierReceiver.mq5  TradeJournalBridge.mq5
mt5-bridge/: COPIER_SETUP.md  INSTALL.md  TradeCopierMaster.mq5  TradeCopierReceiver.mq5  TradeJournalBridge.mq5  package.json  relay-server.js
public/: TradeCopierMaster.mq5  TradeCopierReceiver.mq5  TradeJournalBridge.mq5
scripts/: sync-mql5.mjs  verify_pair_lab_math.ts
shared/quant/: config.ts  pnl.ts  stats.ts  symbolAliasing.ts  symbolMapping.ts  types.ts
src/: App.tsx  index.css
src/hooks/: useAccounts.tsx  (+43 more)
supabase/: config.toml
(+460 files in other folders)
