[package]
name = "saturn-trade-copier"
version = "2.1.0"
description = "Saturn Trade Copier - Low-latency MT5 trade copying"
authors = ["Saturn Trading"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "system-tray", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
notify = "6.1"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
parking_lot = "0.12"
uuid = { version = "1.8", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
